// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Format Integration > 01. formats TypeScript correctly 1`] = `
"export const greet = (name: string) => {
  const message = \`Hello, \${name}!\`;
  console.log(message);
  return message;
};
"
`;

exports[`Format Integration > 02. formats JavaScript correctly 1`] = `
"export const greet = (name) => {
  const message = \`Hello, \${name}!\`;
  console.log(message);
  return message;
};
"
`;

exports[`Format Integration > 03. formats TSX correctly 1`] = `
"interface Props {
  name: string;
}

export const Greeting = ({ name }: Props) => {
  return (
    <div className="greeting">
      <h1>Hello, {name}!</h1>
    </div>
  );
};
"
`;

exports[`Format Integration > 04. formats JSX correctly 1`] = `
"export const Greeting = ({ name }) => (
  <div className="greeting">
    <h1>Hello, {name}!</h1>
  </div>
);
"
`;

exports[`Format Integration > 05. formats Astro correctly 1`] = `
"---
const { name = 'World' } = Astro.props;
---

<div class="greeting flex items-center">
  <h1>Hello, {name}!</h1>
</div>
"
`;

exports[`Format Integration > 06. formats Svelte correctly 1`] = `
"<script>
  export let name = 'World';
</script>

<div class="greeting">
  <h1>Hello, {name}!</h1>
</div>

<style>
  .greeting {
    color: red;
  }
</style>
"
`;

exports[`Format Integration > 07. formats HTML correctly 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <title>Greeting Page</title>
  </head>
  <body>
    <div class="greeting">
      <h1>Hello, World!</h1>
    </div>
  </body>
</html>
"
`;

exports[`Format Integration > 08. formats CSS correctly 1`] = `
".greeting {
  color: "red";
  font-family: "Inter", sans-serif;
  display: flex;
  justify-content: center;
  padding: 20px 10px;
}
"
`;

exports[`Format Integration > 09. formats Markdown correctly 1`] = `
"# Greeting Component

This component displays a friendly greeting.

## Usage

\`\`\`tsx
<Greeting name="World" />
\`\`\`

- Support **custom names**
- Easy to _style_
"
`;

exports[`Format Integration > 10. formats package.json correctly 1`] = `
"{
  "name": "greeting-lib",
  "version": "1.0.0",
  "description": "A library for greetings",
  "scripts": {
    "test": "vitest"
  },
  "dependencies": {
    "a-lib": "1.0.0",
    "z-lib": "1.0.0"
  }
}
"
`;

exports[`Format Integration > 11. applies space-based JSON options to JSON 1`] = `
"{
  "name": "greeting",
  "nested": {
    "enabled": true
  }
}
"
`;

exports[`Format Integration > 12. applies space-based JSON options to JSONC 1`] = `
"{
  // Configuration comment
  "name": "greeting",
  "nested": {
    "enabled": true
  }
}
"
`;

exports[`Format Integration > 13. applies space-based JSON options to JSON5 1`] = `
"{
  name: "greeting",
  nested: {
    enabled: true
  }
}
"
`;

exports[`Format Integration > 14. applies space-based YAML options to YAML 1`] = `
"name: greeting
nested:
  enabled: true
  items:
    - one
    - two
"
`;

exports[`Format Integration > 15. applies space-based YAML options to YML 1`] = `
"name: greeting
nested:
  enabled: true
  items:
    - one
    - two
"
`;

exports[`Format Integration > 16. applies Markdown-specific options to MDX while inheriting base quote behavior 1`] = `
"# Greeting

<Component
  title="Hello"
  items={[1, 2, 3]}
/>
"
`;

exports[`Format Integration > 17. formats TOML correctly 1`] = `
"[package]
name = "example"
version = "1.0.0"

[tool.example]
enabled = true
features = ["alpha", "beta", "gamma"]
"
`;

exports[`Format Integration > formats XML structure, attributes, namespaces, and comments 1`] = `
"<?xml version="1.0" ?>
<catalog
  xmlns:app="urn:example"
  z="last"
  a="first"
>
  <app:item
    title="say &quot;hello&quot;"
    enabled="true"
  />
  <!-- keep this comment -->
  <empty />
</catalog>
"
`;

exports[`Format Integration > inherits JavaScript quotes and trailing commas inside embedded.md 1`] = `
"# Embedded JavaScript

\`\`\`js
const options = {
  first: 'one',
  second: 'two',
  third: 'three',
  fourth: 'four',
  fifth: 'five',
  sixth: 'six',
};
\`\`\`
"
`;

exports[`Format Integration > inherits JavaScript quotes and trailing commas inside embedded.mdx 1`] = `
"# Embedded JavaScript

\`\`\`js
const options = {
  first: 'one',
  second: 'two',
  third: 'three',
  fourth: 'four',
  fifth: 'five',
  sixth: 'six',
};
\`\`\`
"
`;

exports[`Format Integration > inherits general JSON options while preserving package formatting for nested/package.json 1`] = `
"{
  "name": "width-fixture",
  "version": "1.0.0",
  "keywords": [
    "formatting-tools",
    "configuration",
    "developer-workflow",
    "package-metadata"
  ]
}
"
`;

exports[`Format Integration > inherits general JSON options while preserving package formatting for nested/package-lock.json 1`] = `
"{
  "name": "width-fixture",
  "lockfileVersion": 3,
  "packages": {
    "": {
      "name": "width-fixture",
      "version": "1.0.0",
      "keywords": [
        "formatting-tools",
        "configuration",
        "developer-workflow",
        "package-metadata"
      ]
    }
  }
}
"
`;

exports[`Format Integration > inherits general JSON options while preserving package formatting for package.json 1`] = `
"{
  "name": "width-fixture",
  "version": "1.0.0",
  "keywords": [
    "formatting-tools",
    "configuration",
    "developer-workflow",
    "package-metadata"
  ]
}
"
`;

exports[`Format Integration > inherits general JSON options while preserving package formatting for package-lock.json 1`] = `
"{
  "name": "width-fixture",
  "lockfileVersion": 3,
  "packages": {
    "": {
      "name": "width-fixture",
      "version": "1.0.0",
      "keywords": [
        "formatting-tools",
        "configuration",
        "developer-workflow",
        "package-metadata"
      ]
    }
  }
}
"
`;

exports[`Format Integration > prefers double quotes in TOML while preserving literal backslashes 1`] = `
""quoted key" = "hello"
path = 'C:\\work\\project'
"
`;

exports[`Format Integration > preserves TOML key order, comments, and multiline string contents 1`] = `
"# Keep the deployment order
zulu = "last alphabetically"  # Primary target
alpha = "first alphabetically"
targets = [
  "production-region-primary",
  "production-region-secondary",
  "development-region-primary",
  "development-region-secondary"
]
message = """
First line
  Indented second line
Last line
"""
literal = '''
C:\\work\\project
  Keep these spaces
'''
"
`;

exports[`Format Integration > preserves XML mixed text, entities, CDATA, and explicit whitespace 1`] = `
"<document>
  <p>Hello <b>world</b> ! &amp; goodbye.</p>
  <raw xml:space="preserve">  keep  this
  text </raw>
  <script><![CDATA[if (a < b) { value = "x & y"; }]]></script>
</document>
"
`;

exports[`Format Integration > uses Svelte shorthand only when the attribute matches its expression 1`] = `
"<script>
  let title = 'Hello';
  let enabled = true;
</script>

<input
  {title}
  disabled={enabled}
/>
"
`;

exports[`Format Integration > uses double quotes for quoted YAML values in quotes.yaml 1`] = `
"message: "status: ready"
boolean_text: "true"
path: 'C:\\work\\project'
"
`;

exports[`Format Integration > uses double quotes for quoted YAML values in quotes.yml 1`] = `
"message: "status: ready"
boolean_text: "true"
path: 'C:\\work\\project'
"
`;
